# Projet_PE

./: README.md  run_streamlit.bat
data/: features_test.csv  features_train.csv  sample_features_test.csv  sample_test.csv  train_normal.csv
models/: model.pkl
outputs/: alerts.json  sample_alerts.json
projet_PE/: .gitignore  CHANGELOG.md  DELIVERABLES.md  REPORT.md  REPORT_FR.md  TESTING.md  pyproject.toml  requirements.txt  run_demo.py
projet_PE/.github/workflows/: ci.yml
projet_PE/data/: features_test.csv  features_train.csv  final_features.csv  final_train.csv  sample_features_test.csv  sample_test.csv  train_normal.csv
projet_PE/notebooks/: demo.ipynb
projet_PE/projet_pe.egg-info/: PKG-INFO  SOURCES.txt
projet_PE/scripts/: package_deliverables.py
projet_PE/src/: __init__.py  auth.py  background.py  build_final_model.py  detect.py  features.py  generate_sample_alerts.py  traffic_gen.py  train_model.py  validation.py
projet_PE/src/projet_pe.egg-info/: requires.txt
projet_PE/tests/: conftest.py  test_auth.py  test_background.py  test_detect.py  test_e2e.py  test_features.py  test_traffic_gen.py  test_ui.py  test_ui_enhancements.py  test_utils.py  test_validation.py
projet_PE/ui/: streamlit_app.py
scripts/: run_streamlit.py
